# WhatsApp-Chat-Analyser

./: README.md  app.py  pyproject.toml  requirements.txt  run_analysis.py
src/whatsapp_chat_analyser/: __init__.py  parser.py  pipeline.py  plots.py  requirements.txt  sentiment.py  text_features.py  topics.py
